@@ -1,6 +1,6 @@
 DIST aufs-utils-0.1_pre20070917.tar.gz 6759 RMD160 ed22957ead4af90a88d648d7329fe22c32465819 SHA1 6fab689e9d59944336dbcf7532eda5e7887bc454 SHA256 bb3d22bfd0ed8a3558b4aa82e0c8e288fc0f57bba2a9d4cb52b4b09bfc57e49a
 EBUILD aufs-utils-0.1_pre20070917.ebuild 588 RMD160 fff771d7d884ead31ffad1dc9fb7b9ad72f21677 SHA1 cb251582d0171cdd8e3a7708e21294e50c4b3ea4 SHA256 7832a100f09891805709ae484a2293074d642f7ff94b58a022c334e188f10583
-EBUILD aufs-utils-0.1_pre20071203.ebuild 756 RMD160 fa6a0727f4f99023195e33a4e1054260b1d436a6 SHA1 ac496468014c49b1a129908fc03dd2e95fc50178 SHA256 270417b4c0f5130ed7358670a8a03e81c58d99f0336de928edc684e7977ad9cd
+EBUILD aufs-utils-0.1_pre20071203.ebuild 704 RMD160 9624c7de1f512e28834218b2e498b6b804b26bf6 SHA1 d81c691ecc52c4a566d4bcc4120e5936cc754e3c SHA256 feba72187e94668c018ad1ed92d93149562d7a73f95be5e6c448f25d0f8c1cf6
 EBUILD aufs-utils-9999.ebuild 598 RMD160 1d6ac3cb536262c9094e6a829ebafcf192b84c46 SHA1 0b2cc14bccaa5180018c3b3889b1322060177c1e SHA256 ceb8b308f6da0862b24fbd7afed58ba70d9ef9bcdf3de72591a9a67763e48d3f
-MISC ChangeLog 1070 RMD160 328096ffde5b0c535522ea4ea2e89e65e4457646 SHA1 553f2f3fc648613f88997fc49e6c008de06396a3 SHA256 c8e985599647968be0ac6004504a9a3c290af48cfc217ccf6d733a65526e4e17
+MISC ChangeLog 1213 RMD160 f62d973cb4e4fb45d0d7532f75163007c6273468 SHA1 d4fc815eb0e51d6c13289186891196433f3cac85 SHA256 9fbd2822013d7b3854ab1eaa852c5aa2a539a1cc9941c51a5f7ee86f5a5120cb
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
